--- a/src/app/users/users-list/users-list.component.css
+++ b/src/app/users/users-list/users-list.component.css
@@ -1,13 +1,9 @@
-.container {
+.list-header {
   padding: 0.5rem;
   background-color: white;
   box-shadow: 2px 2px rgba(61, 60, 60, 0.5);
   border-radius: 4px;
-  text-align: center;
-}
-
-.list-header {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
