--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,15 +1,9 @@
 .main-container {
   margin-top: 5%;
-
-  display: flex;
-  flex-direction: row;
 }
 
 .list {
-  width: 15%;
-  margin-left: 2%;
+  width: 40%;
+  margin:auto
 }
 
-.outlet {
-  width: 60%;
-}
